# ambiant_stone_data_plateform

./: .gitignore  .gitlab-ci.yml  README.md  cloudbuild.yaml
.github/workflows/: dbt-deploy.yml
0-platform/: readme.md
0-platform/terraform/dbt/big_query/: 0-variables.tf  1-iam.tf  2-bigquery.tf  3-artifactregistry.tf  _settings.tf
0-platform/terraform/dbt/google_storage/: 1-variables.tf  2-main.tf
0-platform/terraform/kubernetes/: readme.md
0-platform/terraform/kubernetes/bootstrap/: 1-variables.tf  _settings.tf
0-platform/terraform/kubernetes/cluster_private/: 0-variables.tf  1-provider.tf  3-subnets.tf  6-firewalls.tf  7-kubernetes.tf  8-node-pools.tf  9-service-account.tf
0-platform/terraform/kubernetes/cluster_public/: 1-provider.tf  main.tf  outputs.tf  provider.tf  variables.tf
1-python/: readme.md
1-python/json_to_gs/data/: customers.ndjson
1-python/json_to_gs/src/: storage_load.py
2-dbt/: Dockerfile  cloudbuild.yaml  pyproject.toml  readme.md  requirements.txt
2-dbt/kubernetes/helm/dbt-bigquery/: values.yaml
2-dbt/kubernetes/helm/dbt-bigquery/templates/: configmap.yaml
2-dbt/models/compute_data/: purchases_by_age_range__c.sql
2-dbt/models/raw_data/: shops__r.sql
2-dbt/profiles/big_query/: profiles.yml
2-dbt/src/: README.md  dbt_project.yml
2-dbt/src/macros/: load_data.sql
2-dbt/src/models/compute_data/: purchases_by_shops__c.sql
2-dbt/src/models/raw_data/: customers__r.sql
2-dbt/src/profiles/big_query/: .user.yml  profiles.yml
3-kestra/: Dockerfile  docker-compose.yml
3-workflow/: workflow.yaml
