[tool.poetry]
name = "ambiant_stone_dbt"
version = "0.1.0"
description = "A demo project to run DBT over Kubernetes"
authors = ["Harisonm <mranaivoharison@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9, <=3.10.12"
dbt-bigquery = "<=1.3.0"
Faker = "<=15.3.2"
ndjson = "<=0.3.1"


[tool.poetry.group.dev.dependencies]
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.13.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
